variaveis de ambiente ok, flask retornando erro

--- a/templates/files.html
+++ b/templates/files.html
@@ -1,5 +1,5 @@
 {% extends "bootstrap/base.html" %}
-{% block html_attribs %} lang="pt"{% endblock %}
+{% block html_attribs %} lang="en"{% endblock %}
 {% block title %}Envio de arquivos{% endblock %}
 
 {% block navbar %}
