--- a/templates/files.html
+++ b/templates/files.html
@@ -15,7 +15,7 @@
   			<h3>Informações do Bucket:</h3>
         <h4>Criado em: {{ my_bucket.creation_date | datetimeformat }}</h4>
         <hr>
-        <form class="upload-form" action="/upload" method="post">
+        <form class="upload-form" action="/upload" method="post" enctype="multipart/form-data">
           <p><input type="file" name="file"></p>
           <button type="submit" name="submit" class="btn btn-primary">Upload de arquivo</button>
   			<table class="table table-striped">
