adicionado ao index

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,10 @@
-{% extends "bootstrap/base.html" %}
-{% block title %}This is an example page{% endblock %}
-
-{% block navbar %}
-<div class="navbar navbar-fixed-top">
-  <!-- ... -->
-</div>
-{% endblock %}
+{% extends "base_layout.html" %}
+{% block title %}S3 Bucket List{% endblock %}
 
 {% block content %}
-  <h1>Lista dos Buckets:</h1>
   <div class="container">
     <div class="col-12-xs">
-      <h3>Bucket List</h3>
+      <h3>Lista dos Buckets</h3>
 
       <table class="table table-striped">
         <tr>
