criado um cabecalho

--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -10,7 +10,9 @@
 
 {% block navbar %}
 <div class="navbar navbar-fixed-top">
-  <!-- ... -->
+  <ul class="nav navbar-nav">
+  	<li><a href="{{ url_for('index') }}">Home</a></li>
+  	<li><a href="{{ url_for('files') }}">Buckets</a></li>
 </div>
 {% endblock %}
 
